add titles to each datatable

--- a/app/views/communities/electric_rates_sales/_rates.html.haml
+++ b/app/views/communities/electric_rates_sales/_rates.html.haml
@@ -12,4 +12,7 @@
         
         -# Data Table Section
         .pt-4.border-top
+          .d-flex.align-items-center.mb-3
+            %i.bi.bi-table.me-2.text-primary
+            %h5.mb-0.fw-bold Electric Rates Data
           = render "communities/#{parent_tab}/rates/data"
