--- a/app/views/communities/electric_rates_sales/_sales.html.haml
+++ b/app/views/communities/electric_rates_sales/_sales.html.haml
@@ -18,4 +18,7 @@
             = render "communities/#{parent_tab}/sales/customer_breakdown"
 
         .pt-4.border-top
+          .d-flex.align-items-center.mb-3
+            %i.bi.bi-table.me-2.text-primary
+            %h5.mb-0.fw-bold Sales Data
           = render "communities/#{parent_tab}/sales/data"
