--- a/app/views/communities/power_generation/_capacity.html.haml
+++ b/app/views/communities/power_generation/_capacity.html.haml
@@ -11,4 +11,7 @@
         
         -# Data Table Section
         .pt-4.border-top
+          .d-flex.align-items-center.mb-3
+            %i.bi.bi-table.me-2.text-primary
+            %h5.mb-0.fw-bold Capacity Data
           = render "communities/#{parent_tab}/capacity/capacity_data"
