--- a/app/views/communities/demographics/_employment.html.haml
+++ b/app/views/communities/demographics/_employment.html.haml
@@ -9,5 +9,8 @@
         = render "communities/#{parent_tab}/employment/employment_chart"
 
     -# Data Table Section
-    .pt-5.border-top.mt-5
+    .pt-4.border-top.mt-5
+      .d-flex.align-items-center.mb-3
+        %i.bi.bi-table.me-2.text-primary
+        %h5.mb-0.fw-bold Employment Data
       = render "communities/#{parent_tab}/employment/employment_data"
