--- a/app/views/communities/fuel/_fuel_prices.html.haml
+++ b/app/views/communities/fuel/_fuel_prices.html.haml
@@ -11,4 +11,7 @@
         
         -# Data Table Section
         .pt-4.border-top
+          .d-flex.align-items-center.mb-3
+            %i.bi.bi-table.me-2.text-primary
+            %h5.mb-0.fw-bold Fuel Price Data
           = render "communities/#{parent_tab}/fuel_prices/datatable"
