move styles from haml to scss, remove bootstrap and only use scss and stimulas, clean up/simplify styles, fix bugs with panels
wip: pagy error (pagy active, then press letter), fix broken search inputs, move active filters if possible

--- a/app/views/searches/advanced.html.haml
+++ b/app/views/searches/advanced.html.haml
@@ -1,29 +1,27 @@
-.container-xxl{ data: { controller: "search-panels", action: "change->search-panels#autoSubmit" } }
+.explorer-wrapper{ data: { controller: "search-panels", action: "change->search-panels#autoSubmit" } }
   = render 'searches/advanced/hidden_form'
 
-  .row.mb-3
-    .col-12
-      = link_to communities_path, class: 'text-decoration-none' do
-        %i.bi.bi-arrow-left.me-2
-        Back
+  .container-xxl.mt-3
+    .row.mb-3
+      .col-12
+        = link_to communities_path, class: 'text-decoration-none' do
+          %i.bi.bi-arrow-left.me-2
+          Back
 
-  .row.g-0.flex-nowrap.mb-3.position-relative
-    .col-auto{ style: "width: 360px; z-index: 20;" }
-      .mb-4.position-sticky.top-0.py-3.bg-white
+  .container-xxl.mt-4
+    .row.flex-nowrap.g-0
+      .col-auto.main_nav_sidebar.p-3
         %h2.fw-bold.mb-1 Community Explorer
-        %p.text-muted.small Filter communities by specific criteria.
-        = render 'searches/advanced/search_input', name: :q_global, placeholder: "Search filters..."
-        .mt-3
-          = render 'searches/advanced/active_filters'
-          = render 'searches/advanced/sidebar_and_panels'
+        %p.text-muted Filter communities by specific criteria.
+        .p-0
+          = render 'searches/advanced/search_input', name: :q_global
+          .mt-3
+            = render 'searches/advanced/sidebar_nav'
 
-    -# THE DRAWER AREA: Panels (Hidden during Turbo Frame updates)
-    - unless turbo_frame_request?
-      .col-auto{ style: "z-index: 40;" }
-        = render 'searches/advanced/panels'
+      .col.main_results_area.ps-3
+        .panel-container
+          = render 'searches/advanced/panels'
 
-    -# RIGHT COLUMN: Results 
-    .col.flex-grow-1.border-start.ps-md-4.bg-light{ style: "min-height: 80vh;" }
-      .mb-3.metadata-results.py-3
-        = turbo_frame_tag "results_frame", data: { turbo_action: "replace" } do
-          = render 'searches/advanced/results'  
+        .results-view
+          = turbo_frame_tag "results_frame" do
+            = render 'searches/advanced/results'
