--- a/app/views/searches/advanced/_community_card.html.haml
+++ b/app/views/searches/advanced/_community_card.html.haml
@@ -85,6 +85,6 @@
 
   -# FOOTER 
   .border-top.px-3.py-2.d-flex.justify-content-end.align-items-center.bg-light
-    = link_to community_path(community), class: "btn btn-sm btn-aedg-primary d-flex align-items-center" do
+    = link_to community_path(community), class: "btn btn-aedg-primary d-flex align-items-center" do
       View
       %i.bi.bi-arrow-right.ms-1
