--- a/app/views/searches/advanced/_results.html.haml
+++ b/app/views/searches/advanced/_results.html.haml
@@ -1,22 +1,32 @@
-%div#results_frame
-  .flex-grow-1.p-4.bg-white.overflow-auto{ style: "height: calc(100vh - 70px);" } 
-    .input-group.input-group-lg.mb-4
-      %span.input-group-text.bg-white.border-end-0
-        %i.bi.bi-search.text-muted
-      = text_field_tag :q_dummy, params[:q], class: 'form-control border-start-0 shadow-none', placeholder: 'Search communities by name...', form: 'filter-form', name: 'q'
+= turbo_frame_tag "results_frame" do
 
-    .d-flex.justify-content-between.align-items-center.mb-3
-      %span.text-muted.fs-5
-        - has_filters = params.values.any? { |v| v.is_a?(Array) } || params[:q].present?
-        = has_filters ? 'Search Results' : 'All Communities'
-        %small.ms-2.text-secondary= "#{pluralize(@pagy.count, 'Community')} found"
+  .mb-4.mt-0
+    = render 'searches/advanced/active_filters'
 
-    - if @pagy.count > 0
-      .vstack.gap-3
-        - @communities.each do |community|
-          = render 'searches/advanced/community_card', community: community
-      .mt-5.d-flex.justify-content-center
-        = raw(pagy_bootstrap_nav(@pagy, link_extra: 'data-turbo-frame="results_frame"'))
-    - else
-      .text-center.mt-5.text-muted
-        %p No communities found.
+  .input-group.mb-4
+    = text_field_tag :q, params[:q], 
+      class: 'form-control shadow-none', 
+      placeholder: 'Search communities by name...', 
+      form: 'filter-form', 
+      autocomplete: "off"
+    
+    %button.btn.btn-aedg-primary{ type: "submit", form: 'filter-form' }
+      Search
+  -# TODO: fix search 
+  .d-flex.justify-content-between.align-items-center.mb-3
+    %span.text-muted.fs-5
+      - has_filters = params.values.any? { |v| v.is_a?(Array) && v.present? } || params[:q].present?
+      = has_filters ? 'Search Results' : 'All Communities'
+      %small.ms-2.text-secondary= "#{pluralize(@pagy.count, 'Community')} found"
+
+  - if @communities.any?
+    .vstack.gap-3
+      - @communities.each do |community|
+        = render 'searches/advanced/community_card', community: community
+    
+    .mt-5.pb-5.d-flex.justify-content-center
+      = raw(pagy_bootstrap_nav(@pagy))
+  - else
+    .text-center.py-5.text-muted
+      %i.bi.bi-geo-alt.display-1.mb-3
+      %p.fs-4 No communities found matching your filters.
