--- a/app/views/searches/advanced/_nav_buttons.html.haml
+++ b/app/views/searches/advanced/_nav_buttons.html.haml
@@ -1,3 +1,4 @@
+-# searches/advanced/_nav_buttons.html.haml
 .d-flex.flex-column.gap-1
   - sections = [ |
       { id: 'offcanvasGrids',    label: 'Electric Grid',               icon: 'grid' },     |
