--- a/app/views/searches/advanced/_results.html.haml
+++ b/app/views/searches/advanced/_results.html.haml
@@ -1,7 +1,10 @@
 = turbo_frame_tag "results_frame" do
-
-  .mb-4.mt-0
-    = render 'searches/advanced/active_filters'
+  - if @active_badges&.any? || params[:q].present?
+    .active-filters-shelf.full-width-shelf
+      .w-100.text-center
+        %small.text-muted.text-uppercase.fw-bold{ style: "font-size: 0.65rem; letter-spacing: 0.05em;" } 
+          Active Filters
+      = render 'searches/advanced/active_filters'
 
   .input-group.mb-4
     = text_field_tag :q, params[:q], 
@@ -12,7 +15,7 @@
     
     %button.btn.btn-aedg-primary{ type: "submit", form: 'filter-form' }
       Search
-  -# TODO: fix search 
+
   .d-flex.justify-content-between.align-items-center.mb-3
     %span.text-muted.fs-5
       - has_filters = params.values.any? { |v| v.is_a?(Array) && v.present? } || params[:q].present?
