--- a/app/views/searches/advanced/_facet.html.haml
+++ b/app/views/searches/advanced/_facet.html.haml
@@ -34,7 +34,7 @@
 
         - if pagy.pages > 1
           .mt-3.small.d-flex.justify-content-center
-            != pagy_bootstrap_nav(pagy, link_extra: 'data-turbo-frame="' + "#{id_prefix}_frame" + '"')
+            != pagy.series_nav(:bootstrap, link_extra: 'data-turbo-frame="' + "#{id_prefix}_frame" + '"')
       
       - else
         .text-center.mt-5.small.text-muted No results found.
