--- a/app/views/searches/advanced/_results.html.haml
+++ b/app/views/searches/advanced/_results.html.haml
@@ -17,7 +17,7 @@
         = render 'searches/advanced/community_card', community: community
 
     .mt-5.d-flex.justify-content-center
-      = raw(pagy_bootstrap_nav(@pagy))
+      = raw(@pagy.series_nav(:bootstrap))
   - else
     .text-center.mt-5.text-muted
       %p No communities found.
