--- a/app/views/communities/demographics/_population.html.haml
+++ b/app/views/communities/demographics/_population.html.haml
@@ -1,4 +1,6 @@
 - parent_tab = 'demographics'
+- has_age_distribution = @community.population_age_sexes.with_age_estimates&.with_moe_age_estimates.exists?
+- has_gender_distribution = @community.population_age_sexes.with_gender_estimates&.with_moe_gender_estimates.exists?
 
 -# --- Section Body ---
 .section-body.m-1.m-md-2.m-lg-4.mt-3
@@ -17,20 +19,22 @@
         most_recent_population: most_recent_population
     
     -# Main Data Card
-    .p-4.border.rounded-3.bg-white.shadow-sm.mb-4
-      - 
-      .row.g-4
-        .col-12.col-xl-8
-          .d-flex.align-items-center.mb-3
-            %i.bi.bi-bar-chart-steps.me-2.text-primary
-            %h5.mb-0.fw-bold Age Distribution
-          = render "communities/#{parent_tab}/population/population_age_chart", population_periods: population_periods, selected_period: population_period
-        
-        .col-12.col-xl-4.border-start-xl
-          .d-flex.align-items-center.mb-3
-            %i.bi.bi-gender-ambiguous.me-2.text-primary
-            %h5.mb-0.fw-bold Gender Distribution
-          = render "communities/#{parent_tab}/population/population_gender_pie", population_periods: gender_periods, selected_period: gender_selected_period
+    .p-4.border.rounded-3.bg-white.shadow-sm
+      - if has_age_distribution || has_gender_distribution
+        .row.g-4
+          - if has_age_distribution
+            .col-12.col-xl-8
+              .d-flex.align-items-center.mb-3
+                %i.bi.bi-bar-chart-steps.me-2.text-primary
+                %h5.mb-0.fw-bold Age Distribution
+              = render "communities/#{parent_tab}/population/population_age_chart", population_periods: population_periods, selected_period: population_period
+              
+          - if has_gender_distribution
+            .col-12.col-xl-4.border-start-xl
+              .d-flex.align-items-center.mb-3
+                %i.bi.bi-gender-ambiguous.me-2.text-primary
+                %h5.mb-0.fw-bold Gender Distribution
+              = render "communities/#{parent_tab}/population/population_gender_pie", population_periods: gender_periods, selected_period: gender_selected_period
 
       -# Data Table Section
       .pt-4.border-top.mt-5
